--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -23,6 +23,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'primary-color': '#FF4240',
                     }
                 }
             }
@@ -40,15 +41,109 @@
 <body>
 
     <!-- ===================== Header Start ======================= -->
-    <header>
+    <header class="max-w-[1170px] mx-auto w-full pt-4 pb-7 px-5 md:px-0 md:w-10/12">
+        <nav>
+            <div class="navbar bg-base-100 items-center">
+                <div class="navbar-start">
+                    <!-- =========== Responsive Area =========== -->
+                    <div class="dropdown">
 
+                        <!-- ========= Humburger Button ============= -->
+                        <div tabindex="0" role="button" class="lg:hidden mr-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <!-- ========= Humburger Button ============= -->
+
+                        <!-- ============= Nav Menu for Mobile =========== -->
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-64 justify-center items-center gap-y-3">
+                            <li>
+                                <a class="text-[#FF4240] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                    href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                    href="#">About</a>
+                            </li>
+                            <li>
+                                <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                    href="#">Pages</a>
+                            </li>
+                            <li>
+                                <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                    href="#">Blog</a>
+                            </li>
+                            <li>
+                                <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                    href="#">Contact</a>
+                            </li>
+                        </ul>
+                        <!-- ============= Nav Menu for Mobile =========== -->
+                    </div>
+                    <!-- =========== Responsive Area =========== -->
+
+                    <!-- ============ Website Logo =============== -->
+                    <a class="text-xl sm:text-2xl md:text-4xl font-extrabold text-[#131318]" href="index.html">Hockey
+                        <span class="text-primary-color">'</span>s
+                    </a>
+                    <!-- ============ Website Logo =============== -->
+
+                </div>
+
+                <!-- ============ Nav Menu for Desktop ================ -->
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1 gap-x-5">
+                        <li>
+                            <a class="text-[#FF4240] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                href="#">About</a>
+                        </li>
+                        <li>
+                            <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                href="#">Pages</a>
+                        </li>
+                        <li>
+                            <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a class="text-[#424247] text-lg transition duration-700 ease-in-out hover:text-white hover:bg-primary-color"
+                                href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- ============ Nav Menu for Desktop ================ -->
+                
+                <!-- ============ Navbar Button ================ -->
+                <div class="navbar-end">
+                    <div class="flex items-center gap-x-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6 text-[#424247] hidden lg:block">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                        </svg>
+
+                        <a class="bg-primary-color py-2 px-[17px] text-white text-sm font-bold sm:text-lg rounded-lg">Get
+                            Ticket</a>
+                    </div>
+                </div>
+                <!-- ============ Navbar Button ================ -->
+            </div>
+        </nav>
     </header>
     <!-- ====================== Header End ======================== -->
 
 
     <!-- ====================== Main Start ======================== -->
     <main>
-        
+
     </main>
     <!-- ======================= Main End ========================= -->
 
