Responsive Banner Section Added Successfully

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </ul>
                 </div>
                 <!-- ============ Nav Menu for Desktop ================ -->
-                
+
                 <!-- ============ Navbar Button ================ -->
                 <div class="navbar-end">
                     <div class="flex items-center gap-x-5">
@@ -142,7 +142,106 @@
 
 
     <!-- ====================== Main Start ======================== -->
-    <main>
+    <main class="max-w-[1170px] mx-auto w-full pt-4 pb-7 px-5 md:px-0 md:w-10/12">
+
+        <!-- ===================== Banner Section Start ============== -->
+        <section>
+            <div class="banner relative">
+
+                <!-- ============ Banner Slider Containeer =============== -->
+                <div class="carousel w-full">
+
+                    <!-- ============= Banner Slide Item 1 ============== -->
+                    <div id="slide1" class="carousel-item relative w-full">
+                        <img src="./Images/banner1.png" class="h-52 object-cover rounded-xl sm:h-auto"/>
+                        <div
+                            class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
+                            <a href="#slide5"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❮</a>
+                            <a href="#slide2"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❯</a>
+                        </div>
+                    </div>
+                    <!-- ============= Banner Slide Item 1 ============== -->
+
+                    <!-- ============= Banner Slide Item 2 ============== -->
+                    <div id="slide2" class="carousel-item relative w-full">
+
+                        <img src="./Images/banner2.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+
+                        <div
+                            class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
+
+                            <a href="#slide1"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❮</a>
+
+                            <a href="#slide3"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❯</a>
+                        </div>
+                    </div>
+                    <!-- ============= Banner Slide Item 2 ============== -->
+
+                    <!-- ============= Banner Slide Item 3 ============== -->
+                    <div id="slide3" class="carousel-item relative w-full">
+                        <img src="./Images/banner3.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <div
+                            class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
+                            <a href="#slide2"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❮</a>
+
+                            <a href="#slide4"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❯</a>
+                        </div>
+                    </div>
+                    <!-- ============= Banner Slide Item 3 ============== -->
+
+                    <!-- ============= Banner Slide Item 4 ============== -->
+                    <div id="slide4" class="carousel-item relative w-full">
+                        <img src="./Images/banner4.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+
+                        <div
+                            class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
+
+                            <a href="#slide3"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❮</a>
+
+                            <a href="#slide5"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❯</a>
+                        </div>
+                    </div>
+                    <!-- ============= Banner Slide Item 4 ============== -->
+
+                    <!-- ============= Banner Slide Item 5 ============== -->
+                    <div id="slide5" class="carousel-item relative w-full">
+                        <img src="./Images/banner5.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <div
+                            class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
+                            <a href="#slide4"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❮</a>
+                            <a href="#slide1"
+                                class="flex justify-center items-center btn-circle border-0 bg-[#131318] text-white hover:bg-[#131318]">❯</a>
+                        </div>
+                    </div>
+                    <!-- ============= Banner Slide Item 5 ============== -->
+
+
+                </div>
+
+
+                <!-- =========== Banner Card ================== -->
+                <div class="card bg-[#131318] w-full p-4 sm:w-[400px] sm:absolute sm:p-8 sm:bottom-6 sm:right-8 lg:w-[505px] rounded-2xl">
+                    <div class="space-y-4">
+                        <h2 class="text-lg font-extrabold text-white md:text-2xl">Meet all the heroes from the field</h2>
+                        <p class="text-sm text-[#ffffff99] md:text-base font-medium">Journey with us as we delve into the captivating stories behind these hockey icons.</p>
+                    </div>
+                </div>
+                <!-- =========== Banner Card ================== -->
+            </div>
+        </section>
+        <!-- ====================== Banner Section End =============== -->
+
+        <!-- ============= Professional Hocky Club Section Start =========== -->
+        <!-- ============== Professional Hocky Club Section End ============ -->
 
     </main>
     <!-- ======================= Main End ========================= -->
