Banner Slider Image Width Problem Fixed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <main class="max-w-[1170px] mx-auto w-full pt-4 pb-7 px-5 md:px-0 md:w-10/12">
 
         <!-- ===================== Banner Section Start ============== -->
-        <section>
+        <section class="mb-16 md:mb-24">
             <div class="banner relative">
 
                 <!-- ============ Banner Slider Containeer =============== -->
@@ -153,7 +153,7 @@
 
                     <!-- ============= Banner Slide Item 1 ============== -->
                     <div id="slide1" class="carousel-item relative w-full">
-                        <img src="./Images/banner1.png" class="h-52 object-cover rounded-xl sm:h-auto"/>
+                        <img src="./Images/banner1.png" class="h-52 w-full object-cover rounded-xl sm:h-auto" />
                         <div
                             class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
                             <a href="#slide5"
@@ -167,7 +167,7 @@
                     <!-- ============= Banner Slide Item 2 ============== -->
                     <div id="slide2" class="carousel-item relative w-full">
 
-                        <img src="./Images/banner2.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <img src="./Images/banner2.png" class="h-52 w-full object-cover rounded-xl sm:h-auto" />
 
                         <div
                             class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
@@ -183,7 +183,7 @@
 
                     <!-- ============= Banner Slide Item 3 ============== -->
                     <div id="slide3" class="carousel-item relative w-full">
-                        <img src="./Images/banner3.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <img src="./Images/banner3.png" class="h-52 w-full object-cover rounded-xl sm:h-auto" />
                         <div
                             class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
                             <a href="#slide2"
@@ -197,7 +197,7 @@
 
                     <!-- ============= Banner Slide Item 4 ============== -->
                     <div id="slide4" class="carousel-item relative w-full">
-                        <img src="./Images/banner4.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <img src="./Images/banner4.png" class="h-52 w-full object-cover rounded-xl sm:h-auto" />
 
                         <div
                             class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
@@ -213,7 +213,7 @@
 
                     <!-- ============= Banner Slide Item 5 ============== -->
                     <div id="slide5" class="carousel-item relative w-full">
-                        <img src="./Images/banner5.png" class="h-52 object-cover rounded-xl sm:h-auto" />
+                        <img src="./Images/banner5.png" class="h-52 w-full object-cover rounded-xl sm:h-auto" />
                         <div
                             class="absolute flex gap-x-5  transform -translate-x-[50%] left-1/2 bottom-4  sm:translate-x-0 sm:left-8   sm:bottom-8">
                             <a href="#slide4"
@@ -229,10 +229,13 @@
 
 
                 <!-- =========== Banner Card ================== -->
-                <div class="card bg-[#131318] w-full p-4 sm:w-[400px] sm:absolute sm:p-8 sm:bottom-6 sm:right-8 lg:w-[505px] rounded-2xl">
+                <div
+                    class="card bg-[#131318] w-full p-4 sm:w-[400px] sm:absolute sm:p-8 sm:bottom-6 sm:right-8 lg:w-[505px] rounded-2xl">
                     <div class="space-y-4">
-                        <h2 class="text-lg font-extrabold text-white md:text-2xl">Meet all the heroes from the field</h2>
-                        <p class="text-sm text-[#ffffff99] md:text-base font-medium">Journey with us as we delve into the captivating stories behind these hockey icons.</p>
+                        <h2 class="text-lg font-extrabold text-white md:text-2xl">Meet all the heroes from the field
+                        </h2>
+                        <p class="text-sm text-[#ffffff99] md:text-base font-medium">Journey with us as we delve into
+                            the captivating stories behind these hockey icons.</p>
                     </div>
                 </div>
                 <!-- =========== Banner Card ================== -->
@@ -242,6 +245,11 @@
 
         <!-- ============= Professional Hocky Club Section Start =========== -->
         <!-- ============== Professional Hocky Club Section End ============ -->
+
+
+        <!-- ==================== Program Section Start ================== -->
+        
+        <!-- ===================== Program Section End =================== -->
 
     </main>
     <!-- ======================= Main End ========================= -->
