Program Section Responsive Added Successfully

--- a/index.html
+++ b/index.html
@@ -248,7 +248,54 @@
 
 
         <!-- ==================== Program Section Start ================== -->
-        
+        <section class="mb-10 md:mb-24">
+            <div
+                class="heading text-center space-y-4 md:space-y-6 border-dashed border-t-2 border-b-2 border-[#13131833] py-6 md:py-8">
+                <h2 class="text-[22px] md:text-4xl font-extrabold text-[#131318]">Program Sections</h2>
+                <p class="text-sm font-medium text-[#13131899] w-full md:text-base md:w-[600px] mx-auto capitalize">As
+                    you navigate through their achievements, challenges, and triumphs, you'll gain a deeper appreciation
+                    for the dedication required to become a hockey hero</p>
+            </div>
+
+            <!-- ============ Program Container ================ -->
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-12 gap-6">
+                <!-- =============== Card Item 1 =============== -->
+                <div class="image-full col-auto md:col-span-6 card md:relative z-10">
+                    <img class="w-full h-[250px] lg:h-auto" src="./Images/2.png" alt="">
+
+                    <div class="text-white mt-4 md:mt-1 z-10 p-4 md:p-0 space-y-5 sm:absolute sm:left-6 sm:bottom-10">
+                        <h2 class="text-xl lg:text-3xl font-extrabold">Junior Program</h2>
+                        <p class="w-full text-sm md:text-base font-medium md:w-[85%] lg:w-[520px]"> Get ready to meet the legends, the game-changers, and the true heroes of the hockey world.</p>
+                        <a href="#" class="btn bg-primary-color hover:bg-primary-color border-0 text-white">Register Now!</a>
+                    </div>
+                </div>
+                <!-- =============== Card Item 1 =============== -->
+
+                <!-- =============== Card Item 2 =============== -->
+                <div class="image-full col-auto  md:col-span-6 card relative z-10">
+                    <img class="w-full h-[250px] lg:h-auto" src="./Images/3.png" alt="">
+
+                    <div class="text-white z-10 mt-4 md:mt-0 p-4 md:p-0 space-y-5 sm:absolute sm:left-6 sm:bottom-10">
+                        <h2 class="text-xl lg:text-3xl font-extrabold">Teenager Program</h2>
+                        <p class="w-full text-sm md:text-base font-medium md:w-[85%] lg:w-[520px]"> Get ready to meet the legends, the game-changers, and the true heroes of the hockey world.</p>
+                        <a href="#" class="btn bg-primary-color hover:bg-primary-color border-0 text-white">Register Now!</a>
+                    </div>
+                </div>
+                <!-- =============== Card Item 2 =============== -->
+
+                <!-- =============== Card Item 3 =============== -->
+                <div class="image-full col-auto md:col-span-12 w-full h-auto card relative z-10">
+                    <img class="w-full h-[300px] sm:h-auto" src="./Images/4.png" alt="">
+
+                    <div class="text-white z-10 mt-5 sm:absolute sm:left-10 sm:bottom-10 space-y-5 p-4 sm:p-0">
+                        <h2 class="text-xl md:text-3xl font-extrabold">Professional Program</h2>
+                        <p class="w-full text-sm md:text-base font-medium md:w-[520px]">As you navigate through their achievements, challenges, and triumphs, you'll gain a deeper appreciation for the dedication required to become a hockey hero. </p>
+                        <a href="#" class="btn bg-primary-color hover:bg-primary-color border-0 text-white">Register Now!</a>
+                    </div>
+                </div>
+                <!-- =============== Card Item 3 =============== -->
+            </div>
+        </section>
         <!-- ===================== Program Section End =================== -->
 
     </main>
