Responsive Product Section Added Successfully

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                         </div>
 
                         <div class="space-y-2">
-                            <h2 class="text-xl font-extrabold text-[#131318]">World Cup Jersy Football</h2>
+                            <h2 class="text-xl font-extrabold text-[#131318]">World Cup Jaket Hoceky</h2>
                             <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
                         </div>
 
