All Description text Are Updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         .progress-ring__circle {
             stroke-dasharray: 400, 400;
-            /* transition: stroke-dashoffset 0.35s; */
+            transition: stroke-dashoffset 0.35s;
             transform: rotate(-20deg);
             transform-origin: 50% 50%;
         }
@@ -418,8 +418,7 @@
 
                     <div class="text-white z-10 mt-4 md:mt-0 p-4 md:p-0 space-y-5 sm:absolute sm:left-6 sm:bottom-10">
                         <h2 class="text-xl lg:text-3xl font-extrabold">Teenager Program</h2>
-                        <p class="w-full text-sm md:text-base font-medium md:w-[85%] lg:w-[520px]"> Get ready to meet
-                            the legends, the game-changers, and the true heroes of the hockey world.</p>
+                        <p class="w-full text-sm md:text-base font-medium md:w-[85%] lg:w-[520px]"> Whether you're a seasoned athlete or a newcomer to the world of fitness, our doors are open to guide you on your journey toward greatness</p>
                         <a href="#" class="btn bg-primary-color hover:bg-primary-color border-0 text-white">Register
                             Now!</a>
                     </div>
@@ -559,7 +558,7 @@
 
                         <div class="space-y-2">
                             <h2 class="text-xl font-extrabold text-[#131318]">World Cup Flags Football</h2>
-                            <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
+                            <p class="text-base font-medium text-[#13131888]"> Our new products are born out of a commitment to innovation. </p>
                         </div>
 
                         <div class="flex flex-col space-y-3 space-x-0 md:space-y-0 md:flex-row  md:items-center">
@@ -619,7 +618,7 @@
 
                         <div class="space-y-2">
                             <h2 class="text-xl font-extrabold text-[#131318]">Cap For Hockeys</h2>
-                            <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
+                            <p class="text-base font-medium text-[#13131888]">We've carefully designed these products with you in mind.</p>
                         </div>
 
                         <div class="flex flex-col space-y-3 space-x-0 md:space-y-0 md:flex-row md:space-x-3 md:items-center">
@@ -679,7 +678,7 @@
 
                         <div class="space-y-2">
                             <h2 class="text-xl font-extrabold text-[#131318]">World Cup Jersy Football</h2>
-                            <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
+                            <p class="text-base font-medium text-[#13131888]"> Experience enhanced functionality, user-friendly interfaces.</p>
                         </div>
 
                         <div class="flex flex-col space-y-3 space-x-0 md:space-y-0 md:flex-row  md:items-center">
@@ -740,7 +739,7 @@
 
                         <div class="space-y-2">
                             <h2 class="text-xl font-extrabold text-[#131318]">Helmet for Hoceky</h2>
-                            <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
+                            <p class="text-base font-medium text-[#13131888]">Our new products are built to last, ensuring durability and reliability that you can depend on.</p>
                         </div>
 
                         <div class="flex flex-col space-y-3 space-x-0 md:space-y-0 md:flex-row md:space-x-3 md:items-center">
@@ -800,7 +799,7 @@
 
                         <div class="space-y-2">
                             <h2 class="text-xl font-extrabold text-[#131318]">Ball for Hoceky</h2>
-                            <p class="text-base font-medium text-[#13131888]">Highlight key features, benefits, or innovations of the first product</p>
+                            <p class="text-base font-medium text-[#13131888]">These innovative additions represent our commitment to pushing boundaries</p>
                         </div>
 
                         <div class="flex flex-col space-y-3 space-x-0 md:space-y-0 md:flex-row  md:items-center">
